# descent

./: .gitignore  .rubocop.yml  CHANGELOG.md  Gemfile  README.md  RUBY_TARGET_PLAN.md  Rakefile  SYNTAX.md  TODO-DESCENT.md  TODO.md  characters.md  descent.gemspec  implementation-spec.md
examples/: brackets.desc  elements.desc  keywords.desc  lines.desc  markdown.desc  minimal.desc  param_test.desc  prepend_span.desc  scan_param.desc  udon_complete.desc  values.desc
exe/: descent
lib/: descent.rb
lib/descent/: ast.rb  generator.rb  ir.rb  ir_builder.rb  lexer.rb  parser.rb  railroad.rb  validator.rb  version.rb
lib/descent/templates/ruby/: _command.liquid  parser.liquid
lib/descent/templates/rust/: _command.liquid  parser.liquid
lib/descent/tools/: debug.rb  diagram.rb  generate.rb  validate.rb
rust/: Cargo.toml  PROGRESS.md
rust/descent-cli/: Cargo.toml
rust/descent-cli/src/: main.rs
rust/descent-core/: Cargo.toml
rust/descent-core/src/: ast.rs  classify.rs  dump.rs  ir.rs  ir_builder.rs  lib.rs  parser.rs  reader.rs
rust/descent-core/src/emit/: mod.rs  rust_pushdown.rs
rust/descent-core/src/emit/rust/: engine.rs  mod.rs
rust/descent-core/templates/rust/: _command.j2  parser.j2
rust/libdescent/: Cargo.toml
rust/libdescent/src/: charclass.rs  ir.rs  ir_builder.rs  lexer.rs  lib.rs  parser.rs  reader.rs
rust/libdescent/src/emit/rust/: engine.rs  literals.rs  mod.rs
rust/libdescent/templates/rust/: parser.j2
rust/spikes/normalizations/: NOTES.md  combined-no-placeholder-cells.desc  combined-quote-aliases.desc
rust/spikes/udon-reader/: Cargo.toml  NOTES.md
rust/spikes/udon-reader/src/: lib.rs  main.rs
rust/tests/fixtures/: brackets.desc  brackets.rs.expected  brackets.trace.rs.expected  combined.desc  combined.rs.expected  combined.trace.rs.expected  elements.desc  elements.rs.expected  elements.trace.rs.expected  keywords.desc  keywords.rs.expected  keywords.trace.rs.expected  lines.desc  lines.rs.expected  lines.trace.rs.expected  markdown.rs.expected  markdown.trace.rs.expected  minimal.rs.expected  minimal.trace.rs.expected  param_test.rs.expected  param_test.trace.rs.expected  udon_complete.rs.expected  udon_complete.trace.rs.expected  values.rs.expected  values.trace.rs.expected
rust/tools/: diff_frontend.sh  diff_generate.sh  diff_reader.sh  dump_ast.rb  dump_context.rb  dump_tokens.rb
test/: descent_test.rb  generator_test.rb  harness_test.rb  ir_builder_test.rb  lexer_test.rb  markdown_test.rb  parser_test.rb  test_helper.rb  validator_test.rb
test/fixtures/: minimal.desc
test/rust_harness/: .gitignore  Cargo.toml
test/rust_harness/benches/: parse.rs
test/rust_harness/src/: lib.rs  main.rs
