# libdescent — Rust rewrite of the descent parser generator.
# NOTE: crates.io name is an open decision (`descent` is squatted); publish = false.
[package]
name = "libdescent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
regex.workspace = true
serde_json.workspace = true
minijinja.workspace = true
