[package]
name = "descent_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2"

# Optional: serde for JSON event output
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"

[[bin]]
name = "run_parser"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false
