# SPIKE: udon-core events -> descent Tokens (the production front-end
# candidate). Differential-tested against descent-core::lexer (the oracle) by
# rust/tools/diff_reader.sh; mismatch findings live in NOTES.md here.
[package]
name = "udon-reader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
descent-core = { path = "../../descent-core" }
udon-core = { path = "../../vendor/udon-core" }
serde_json.workspace = true
